[gd_scene load_steps=4 format=2]

[ext_resource path="res://Score.gd" type="Script" id=1]
[ext_resource path="res://fonts/ARK @somepx/Ark.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.262745, 0.321569, 0.239216, 1 )
font_data = ExtResource( 2 )

[node name="Score" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 29.0
margin_right = 113.0
margin_bottom = 18.167
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_colors/font_outline_modulate = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.262745, 0.321569, 0.239216, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
